--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,10 @@ dependencies {
 
     implementation("com.google.mlkit:pose-detection:17.0.1-beta3")
 
+    implementation("androidx.compose.material:material-icons-core:$compose_version")
+    implementation("androidx.compose.material:material-icons-extended:$compose_version")
 
+    implementation("androidx.compose.foundation:foundation:$compose_version")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
