--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,12 @@ android {
 dependencies {
 
     implementation 'com.google.mlkit:pose-detection-common:17.0.0'
+
+    //implementation 'com.google.mlkit:pose-detection:18.0.0-beta2'
+
+
+
+
     def camerax_version = "1.0.1"
     implementation "androidx.camera:camera-camera2:$camerax_version"
 
@@ -64,6 +70,10 @@ dependencies {
     implementation("androidx.compose.material:material-icons-extended:$compose_version")
 
     implementation("androidx.compose.foundation:foundation:$compose_version")
+
+    def nav_version = "2.4.2"
+
+    implementation("androidx.navigation:navigation-compose:$nav_version")
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
