--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,9 +71,13 @@ dependencies {
 
     implementation("androidx.compose.foundation:foundation:$compose_version")
 
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+
     def nav_version = "2.4.2"
 
     implementation("androidx.navigation:navigation-compose:$nav_version")
+
+    implementation 'androidx.activity:activity-compose:1.3.0-rc01'
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
